Post update: Just first try without fancy stuff

--- a/_posts/2015-10-19-test1.markdown
+++ b/_posts/2015-10-19-test1.markdown
@@ -16,3 +16,4 @@ Anyway, the post seems editable again weee! (Gonna test it more.)
 
 Yup, saved, commited, propagated, properly. Now for some formatting exercises.
 
+Now the preview does not display anything.
