Post update: Just first try without fancy stuff

--- a/_posts/2015-10-19-test1.markdown
+++ b/_posts/2015-10-19-test1.markdown
@@ -30,4 +30,4 @@ In the meantime, remarks so far:
 - preview pane definitely should be iframe
 - markdown help somewhere near the edit erea
 - this list appeareed well on github with "-__" (double space) bullets, but not on the page, changing to "-_" (single space)
--- yes, that works. Kramdown really is not markdown...
+     - yes, that works. Kramdown really is not markdown...
